--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 
     -->
     <script  src="js/index.js"></script>
-    <p>Hello World! </p>
+    <p>Hello World!, We are software developers!</p>
   </body>
 </html>
