--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
 
     -->
     <script  src="js/index.js"></script>
-    <p>Hello World!, We are software developers!</p>
+    <main id="main-doc">
+      <section class="main-section">
+        <p>Hello World!, We are software developers!</p>
+      </section>
+
+      <section class="main-section">
+      </section>
+
+      <section class="main-section">
+      </section>
+
+      <section class="main-section">
+      </section>
+
+      <section class="main-section">
+      </section>
+        
+   </main>
   </body>
 </html>
