Added the heathers and IDs to the sections

--- a/index.html
+++ b/index.html
@@ -23,20 +23,26 @@
     -->
     <script  src="js/index.js"></script>
     <main id="main-doc">
-      <section class="main-section">
+      <section class="main-section" id="header_1">
+          <header>Header 1</header>
         <p>Hello World!, We are software developers!</p>
       </section>
 
-      <section class="main-section">
+      <section class="main-section" id="header_2">
+        <header>Header 2</header>
       </section>
 
-      <section class="main-section">
+      <section class="main-section" id="header_3">
+          <header>Header 3</header>
+
       </section>
 
-      <section class="main-section">
+      <section class="main-section" id="header_4">
+          <header>Header 4</header>
       </section>
 
-      <section class="main-section">
+      <section class="main-section" id="header_5">
+          <header>Header 5</header>
       </section>
         
    </main>
