Added user story 5 and 6

--- a/index.html
+++ b/index.html
@@ -23,28 +23,42 @@
     -->
     <script  src="js/index.js"></script>
     <main id="main-doc">
+
       <section class="main-section" id="header_1">
           <header>Header 1</header>
-        <p>Hello World!, We are software developers!</p>
+          <p>Hello World!, We are software developers!</p>
+          <p>Hello World!, We are software developers!</p>
+          <code> x + y = z</code>
       </section>
 
       <section class="main-section" id="header_2">
         <header>Header 2</header>
+        <p>Hello World!, We are software developers!</p>
+        <p>Hello World!, We are software developers!</p>
+        <code> x + y = z</code>
       </section>
 
       <section class="main-section" id="header_3">
           <header>Header 3</header>
-
+          <p>Hello World!, We are software developers!</p>
+          <p>Hello World!, We are software developers!</p>
+          <code> x + y = z</code>
       </section>
 
       <section class="main-section" id="header_4">
           <header>Header 4</header>
+          <p>Hello World!, We are software developers!</p>
+          <p>Hello World!, We are software developers!</p>
+          <code> x + y = z</code>
       </section>
 
       <section class="main-section" id="header_5">
           <header>Header 5</header>
+          <p>Hello World!, We are software developers!</p>
+          <p>Hello World!, We are software developers!</p>
+          <code> x + y = z</code>
       </section>
-        
+
    </main>
   </body>
 </html>
