Added the navbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+    <nav id="navbar">
+      <a hrev="#header_1">Main</a>
+      <a hrev="#header_2">Main</a>
+      <a hrev="#header_3">Main</a>
+      <a hrev="#header_4">Main</a>
+      <a hrev="#header_5">Main</a>
+    </nav>
     <!--
 
     Hello Camper!
@@ -29,6 +35,9 @@
           <p>Hello World!, We are software developers!</p>
           <p>Hello World!, We are software developers!</p>
           <code> x + y = z</code>
+          <ul>
+              <li>List element 1</li>
+          </ul>
       </section>
 
       <section class="main-section" id="header_2">
@@ -36,6 +45,9 @@
         <p>Hello World!, We are software developers!</p>
         <p>Hello World!, We are software developers!</p>
         <code> x + y = z</code>
+        <ul>
+            <li>List element 2</li>
+        </ul>
       </section>
 
       <section class="main-section" id="header_3">
@@ -43,6 +55,9 @@
           <p>Hello World!, We are software developers!</p>
           <p>Hello World!, We are software developers!</p>
           <code> x + y = z</code>
+          <ul>
+              <li>List element 3</li>
+          </ul>
       </section>
 
       <section class="main-section" id="header_4">
@@ -50,6 +65,9 @@
           <p>Hello World!, We are software developers!</p>
           <p>Hello World!, We are software developers!</p>
           <code> x + y = z</code>
+          <ul>
+              <li>List element 4</li>
+          </ul>
       </section>
 
       <section class="main-section" id="header_5">
@@ -57,6 +75,9 @@
           <p>Hello World!, We are software developers!</p>
           <p>Hello World!, We are software developers!</p>
           <code> x + y = z</code>
+          <ul>
+              <li>List element 5</li>
+          </ul>
       </section>
 
    </main>
