Added user story 9,10,11

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <nav id="navbar">
-      <a hrev="#header_1">Main</a>
-      <a hrev="#header_2">Main</a>
-      <a hrev="#header_3">Main</a>
-      <a hrev="#header_4">Main</a>
-      <a hrev="#header_5">Main</a>
+      <header> <p>Technical Documentation </p> </header>
+      <a hrev="#header_1" class="nav-link">Main</a>
+      <a hrev="#header_2" class="nav-link">Main</a>
+      <a hrev="#header_3" class="nav-link">Main</a>
+      <a hrev="#header_4" class="nav-link">Main</a>
+      <a hrev="#header_5" class="nav-link">Main</a>
     </nav>
     <!--
 
