Added navlinks to the nav bar so you can navigate within the page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <nav id="navbar">
       <header> <p>Technical Documentation </p> </header>
-      <a hrev="#header_1" class="nav-link">Main</a>
-      <a hrev="#header_2" class="nav-link">Main</a>
-      <a hrev="#header_3" class="nav-link">Main</a>
-      <a hrev="#header_4" class="nav-link">Main</a>
-      <a hrev="#header_5" class="nav-link">Main</a>
+      <a href="#header_1" class="nav-link">Header 1</a>
+      <a href="#header_2" class="nav-link">Header 2</a>
+      <a href="#header_3" class="nav-link">Header 3</a>
+      <a href="#header_4" class="nav-link">Header 4</a>
+      <a href="#header_5" class="nav-link">Header 5</a>
     </nav>
     <!--
 
