Added user story 14 and 15

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
-  </head>
 
+  </head>
+  <style type="text/css">
+     @media only screen and (max-width: 815px) {
+       /* For mobile phones: */
+       #navbar ul {
+         border: 1px solid;
+         height: 207px;
+       }
+   </style>
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <nav id="navbar">
